Updated GitIgnore, added KNN and RBF.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,19 @@ results.txt
 resultsFullOrder.txt
 resultsFullOrdertest.txt
 resultstest.txt
+Main.exe
+Main.hi
+Main.o
+normalizedDataTest.txt
+DataParser/DataReader.hi
+DataParser/DataReader.o
+Models/KNN.hi
+Models/KNN.o
+Models/LinearModel.hi
+Models/LinearModel.o
+Models/LogisticModel.hi
+Models/LogisticModel.o
+Models/Types.hi
+Models/Types.o
+Models/Util.hi
+Models/Util.o
